--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -9,8 +9,9 @@
                 {% endfor %}
             {% endif %}
         {% endwith %}
-        
+
         <form method="POST" action="/login">
+            <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
             <p>Username:</p>
             <input name="username" placeholder="Username">
             <p>Password:</p>
